src/_assets/css/blocks/_header.css
.header-wrap {
	position: relative;
	z-index: 3;

	background: var(--_header-bg-color);

	isolation: isolate;
}

.header {
	position: relative;

	display: flex;
	align-items: center;
	gap: var(--size-2xs) var(--size-l);
	padding-block: var(--size-m);
}

.header-nav {
	margin-inline-end: auto;
}

.header-list {
	--gap: var(--size-m);

	display: flex;
	gap: var(--gap);
	padding: 0;

	list-style-type: '';
}

.header-logo {
	.logo {
		inline-size: auto;
		block-size: 2rem;
	}

	.logo-paths use {
		fill: var(--_logo-color-active);
		stroke: var(--_logo-color);
		clip-path: var(--CLIP, none);

		@media (--accept-motion) {
			transition-timing-function: var(--easing-circ-out);
			transition-duration: var(--anim-long);
			transition-property: stroke-width;

			&[data-k] {
				transition-delay: 100ms;
			}

			&[data-n] {
				transition-delay: 200ms;
			}
		}
	}

	&:is(:hover, :focus-visible) .logo-paths use {
		stroke-width: 0;
	}
}

.header-menu {
	flex: 1;
	display: flex;
	align-items: center;
	gap: var(--size-2xs) var(--size-m);
}

.header-logo,
.header-menu-toggle,
theme-picker button {
	flex: 0 0 auto;
}

.header-menu-toggle {
	[data-js='false'] &:not(:focus),
	[data-js='true'] &:not([aria-pressed='true']) {
		[data-show-when='idle'] {
			transform: translate(0) scale(1);
		}
	}

	[data-js='false'] &:focus,
	[data-js='true'] &[aria-pressed='true'] {
		[data-show-when='pressed'] {
			transform: translate(0) scale(1);
		}
	}

	line {
		transform-origin: 50% 50%;
		transform-box: view-box;
	}
}

.header-link {
	--LINK-color: var(--_header-link-color, var(--_link-color));

	font-weight: bold;

	&:not([aria-current='page']) {
		--LINK-underline-color: transparent;
	}

	&:is(:hover, :focus) {
		--LINK-color: var(--_header-link-color-active, var(--_link-color-active));
		--LINK-underline-color: currentColor;
		--LINK-skip-ink: auto;
		--LINK-underline-offset: calc(var(--_link-underline-offset) / 2);
		--LINK-decoration-thickness: auto;
	}

	&[aria-current='page']:not(:hover, :focus) {
		text-decoration-inset: 0.5ch;
	}

	@media (--accept-motion) {
		transition-property: text-decoration-color, text-underline-offset, text-decoration-inset;
		transition-duration: var(--anim-short);
		transition-timing-function: var(--easing-out);
	}
}

html[data-js='false'] .header-themepicker {
	display: none;
}

.header-themepicker {
	position: relative;

	flex-shrink: 0;

	isolation: isolate;
}

.header-themepicker-toggle {
	position: relative;
	z-index: 1;

	--CTA-display: flex;
}

.theme-picker-scheme-label {
	text-transform: uppercase;
}

@media (--large-viewport) {
	.header-themepicker .header-themepicker-toggle ~ theme-picker {
		visibility: hidden;
		pointer-events: none;

		transform: scale(0) rotate(15deg) translate(1rem, -1rem);
		transform-origin: 100% 0;

		@media (--accept-motion) {
			transition-property: transform, visibility;
			transition-duration: var(--anim-short);
			transition-timing-function: var(--easing-in);
		}
	}

	.header-themepicker .header-themepicker-toggle[aria-pressed='true'] ~ theme-picker {
		visibility: visible;
		pointer-events: auto;

		transform: scale(1);

		@media (--accept-motion) {
			transition-duration: var(--anim-short);
			transition-timing-function: var(--easing-out);

			/* Fallback above, linear()-anim support below (long animation duration for the bounce to look bouncy) */
			@supports (transition: all linear(0, 0.5 1%)) {
				transition-duration: var(--anim-long);
				transition-timing-function: var(--easing-bounce);
			}
		}
	}

	theme-picker {
		/**
		 * 1: padding on both sides + gap between items + expected buttons size.
		 * 2: CTA-radius-aware picker corner rounding.
		 */
		--PICKER-parent-inline-size: calc(var(--_cta-icon-size, 2.5em) + 2 * (var(--_cta-border-width) + var(--_cta-padding-inline)));
		--PICKER-cta-inline-size: calc(var(--_cta-icon-size, 1.5em) + 2 * var(--_cta-padding-block)); /* It's a square! */
		--PICKER-gap: var(--size-m);
		--PICKER-padding: var(--size-m);

		position: absolute;
		inset-block-start: calc(var(--PICKER-cta-inline-size) / 2 + var(--PICKER-padding) / 2);
		inset-inline-end: calc(var(--PICKER-parent-inline-size) / 2);

		display: flex;
		flex-direction: column;
		align-items: center;
		gap: var(--PICKER-gap);
		min-inline-size: calc(var(--PICKER-padding) * 2 + var(--PICKER-gap) + var(--PICKER-cta-inline-size) * 2); /* 1 */
		padding: var(--PICKER-padding);

		color: var(--color-text);
		border: 1px solid var(--color-text);
		border-radius: clamp(0px, var(--_corner) * 999, var(--_cta-border-radius) + var(--PICKER-padding)); /* 2 */
		border-start-end-radius: 0; /* Top-right corner*/
		background-color: var(--color-surface);
		box-shadow: var(--_shadow-active);
	}

	/* .theme-picker-scheme-groups {
		display: grid;
		grid-template-columns: repeat(2, minmax(max-content, 1fr));
		gap: var(--size-m);
		justify-content: center;
		align-items: flex-start;

		background: linear-gradient(transparent, var(--color-text), transparent) no-repeat center / 1px 100%;
	} */

	.theme-picker-scheme-group {
		flex: 1 0 auto;
		display: flex;
		gap: var(--size-xs);
		flex-wrap: wrap;
		align-items: start;
		justify-content: center;
	}

	.theme-picker-scheme-label {
		flex: 1 0 100%;
		display: flex;
		justify-content: center;

		font-size: var(--typeScale-n2);
		line-height: 1;
		text-align: center;
	}
}

@media (--small-viewport) {
	.header-wrap::before {
		content: '';

		pointer-events: none;

		position: absolute;
		inset: 100% 0 auto 0;
		z-index: 1;

		block-size: 100vh;

		background-color: var(--color-canvas); /* Fallback */
		background-color: color-mix(in hsl, var(--color-canvas), transparent 67%);

		opacity: 0;
		-webkit-backdrop-filter: blur(12px);
		backdrop-filter: blur(12px);
		/* Only works in Chrome 😢
		-webkit-backdrop-filter: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='0' height='0'%3E%3Cdefs%3E%3Cfilter id='noisyblur'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.5' numOctaves='1' seed='0' stitchTiles='noStitch' result='feTurbulence-6f6b7e9a'%3E%3C/feTurbulence%3E%3CfeGaussianBlur in='SourceGraphic' stdDeviation='8' edgeMode='none' result='feGaussianBlur-57739bbc'%3E%3C/feGaussianBlur%3E%3CfeDisplacementMap in='feGaussianBlur-57739bbc' in2='feTurbulence-6f6b7e9a' scale='32' xChannelSelector='R' yChannelSelector='R'%3E%3C/feDisplacementMap%3E%3C/filter%3E%3C/defs%3E%3C/svg%3E#noisyblur");
		backdrop-filter: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='0' height='0'%3E%3Cdefs%3E%3Cfilter id='noisyblur'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.5' numOctaves='1' seed='0' stitchTiles='noStitch' result='feTurbulence-6f6b7e9a'%3E%3C/feTurbulence%3E%3CfeGaussianBlur in='SourceGraphic' stdDeviation='8' edgeMode='none' result='feGaussianBlur-57739bbc'%3E%3C/feGaussianBlur%3E%3CfeDisplacementMap in='feGaussianBlur-57739bbc' in2='feTurbulence-6f6b7e9a' scale='32' xChannelSelector='R' yChannelSelector='R'%3E%3C/feDisplacementMap%3E%3C/filter%3E%3C/defs%3E%3C/svg%3E#noisyblur"); */

		@media (--accept-motion) {
			transition: opacity var(--anim-short) var(--easing-in);
		}
	}

	.header-logo,
	.header-menu-toggle {
		position: relative;
		z-index: 2;
	}

	.header-menu-toggle {
		margin-inline-start: auto;
	}

	.header-menu {
		html[data-js='true'] &::before {
			content: '';

			block-size: var(--theme-group-rule);
			inline-size: 100%;

			background: linear-gradient(90deg, transparent, var(--color-heading), transparent);
		}

		--theme-group-rule: 1px;
		--theme-group-gap: calc(max(8px, var(--size-l)) + var(--theme-group-rule));

		visibility: hidden;
		pointer-events: none;

		position: absolute;
		z-index: 1;
		inset-block-start: 100%;
		inset-inline: 0;

		display: flex;
		flex-direction: column;
		gap: var(--size-m);
		max-block-size: calc(100vh - 100% - var(--size-l));
		max-block-size: calc(100dvh - 100% - var(--size-l));
		margin: var(--size-m) 0;
		padding: var(--size-m);
		overflow: auto;

		border: 1px solid var(--_card-border-color);
		border-radius: var(--_corner);
		background-color: var(--color-surface);
		box-shadow: var(--_shadow-active);

		transform: translateY(8em) scale(0.9);
		opacity: 0;

		@media (--accept-motion) {
			transition-property: transform, opacity, visibility;
			transition-duration: var(--anim-short);
			transition-timing-function: var(--easing-in);
		}
	}

	.header-nav {
		order: -1;
		inline-size: 100%;
	}

	.header-list {
		--gap: var(--size-s);
		flex-direction: column;
		align-items: center;
		inline-size: 100%;
		gap: var(--gap);

		font-size: 1.5em;
	}

	.header-themepicker {
		order: 1;
		inline-size: 100%;
	}

	theme-picker {
		display: flex;
		flex-direction: column;
		align-items: center;
		gap: var(--theme-group-gap);
	}

	.header-themepicker-heading {
		display: flex;
		justify-content: center;
		align-items: center;
		gap: var(--size-s);
		margin-block-end: var(--size-s);
	}

	.theme-picker-scheme-group {
		position: relative;

		display: flex;
		flex-wrap: wrap;
		gap: max(8px, var(--size-xs));
		align-items: center;
		justify-content: flex-end;
		inline-size: 100%;

		&:not(:last-child) {
			&::before {
				content: '';

				position: absolute;

				block-size: var(--theme-group-rule);
				inset-block-end: calc(-1 * var(--theme-group-gap) / 2);
				inset-inline: 0;

				background: linear-gradient(90deg, transparent, var(--color-text), transparent);
			}
		}
	}

	.theme-picker-scheme-label {
		margin-inline-end: auto;

		font-size: var(--typeScale-n1);
	}

	html[data-js='false'] .header-menu-toggle:focus {
		pointer-events: none;
	}

	html[data-js='false'] .header-menu:focus-within,
	html[data-js='false'] .header-menu-toggle:focus + .header-menu,
	html[data-js='true'] .header-menu-toggle[aria-pressed='true'] + .header-menu {
		visibility: visible;

		opacity: 1;
		transform: translate(0, 0);

		@media (--accept-motion) {
			transition-duration: var(--anim-medium);
			transition-timing-function: var(--easing-circ-out);
		}

		& > * {
			pointer-events: auto;
		}
	}

	html[data-js='true'] .header-menu-toggle[aria-pressed='true'] + .header-menu {
		pointer-events: auto;
	}

	html[data-js='false']:has(.header-menu:focus-within),
	html[data-js='false']:has(.header-menu-toggle:focus + .header-menu),
	html[data-js='true']:has(.header-menu-toggle[aria-pressed='true'] + .header-menu) {
		overflow: hidden; /* Prevent scrolling */
		scrollbar-gutter: stable; /* Preserve space occupied by scrollbar */

		& .header-wrap {
			&::before {
				pointer-events: auto; /* Make it clickable to trigger a close */

				opacity: 1;
			}

			& + main {
				transform: scale(0.95);
			}

			@media (--accept-motion) {
				&::before,
				& + main {
					transition-duration: var(--anim-long);
					transition-timing-function: var(--easing-out);
				}
			}
		}
	}

	@media (--accept-motion) {
		main {
			transform-origin: 50% 50vh; /* Middle of the screen regardless of <main>'s height) */

			transition: transform var(--anim-short) var(--easing-in);
		}
	}
}

@media (--large-viewport) {
	.header-link {
		position: relative;

		isolation: isolate;

		&::after {
			content: '';

			position: absolute;
			inset: calc(var(--gap) * -0.5) calc(var(--gap) * -0.25);
			z-index: -1;
		}
	}
}

.announcement {
	grid-column: --fullbleed;
	padding: var(--size-2xs) var(--size-m);

	font-size: var(--typeScale-n2);
	color: var(--color-canvas);
	background: var(--color-heading);

	& :any-link:is(:hover, :focus-visible) {
		--LINK-color: var(--color-surface);
		--LINK-underline-color: var(--color-text);
	}
}

